fix scrollbar x + footer

--- a/css/layouts/footer.css
+++ b/css/layouts/footer.css
@@ -14,6 +14,7 @@
     justify-content: space-evenly;
     height: 100%;
     align-items: center;
+    gap: 1rem;
 }
 
 .footer__me {
