--- a/css/main.css
+++ b/css/main.css
@@ -16,4 +16,5 @@ body {
     font-family: var(--main-font);
     color: var(--grey);
     position: relative;
+    overflow-x: hidden;
 }
